--- a/html/staff.html
+++ b/html/staff.html
@@ -122,8 +122,17 @@
   <script src="../js/queue.js"></script>
   <script src="../js/style.js"></script>
   <script>
-    // Require staff or admin role
-    requireRole(['staff', 'admin']);
+    // Wait for page to fully load before checking role
+    window.addEventListener('load', function() {
+      console.log('=== STAFF.HTML LOADED ===');
+      // Require staff or admin role
+      const hasAccess = requireRole(['staff', 'admin']);
+      if (!hasAccess) {
+        console.error('Access denied, requireRole returned false');
+        return;
+      }
+      console.log('✓ Access granted to staff page');
+    });
 
     let autoRefreshInterval = null;
     let currentDepartment = 'opd';
@@ -131,7 +140,11 @@
 
     // Handler for marking patient as attended
     async function handleMarkAttended(tokenId, departmentCode) {
-      if (confirm('Mark this patient as attended?')) {
+      const confirmed = await showConfirm('Mark this patient as attended?', { 
+        confirmText: 'Mark Attended', 
+        cancelText: 'Cancel' 
+      });
+      if (confirmed) {
         const result = await markPatientAttended(tokenId);
         if (result.success) {
           await refreshQueueDisplay(departmentCode, true);
