feat: SMTP email (Gmail TLS/SSL) with diagnostics; patient status check (token or appointment); queues Apply -> registration; navbar cleanup; local logo across pages; logo rendering fixes; HOTFIX patient_email; improved queue API error handling

--- a/html/display.html
+++ b/html/display.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="logo-container">
         <div style="justify-content: center;">
-          <img src="https://via.placeholder.com/60x60/2c7fb8/ffffff?text=QECH" alt="QECH Logo" class="logo" />
+          <img src="../images/Screenshot 2025-11-01 111731.png" alt="QECH Logo" class="logo" />
           <div>
             <h1 data-i18n="hospital_name">Queen Elizabeth Central Hospital</h1>
             <h2 data-i18n="system_name">Digital Queue Management System</h2>
@@ -26,9 +26,6 @@
       <nav aria-label="Primary">
         <ul>
           <li><a class="btn btn-secondary" href="../index.html" data-i18n="nav_home">Home</a></li>
-          <li><a class="btn btn-secondary" href="patient.html" data-i18n="nav_patient">Patient</a></li>
-          <li><a class="btn btn-secondary" href="staff.html" data-i18n="nav_staff">Staff</a></li>
-          <li><a class="btn btn-secondary" href="admin.html" data-i18n="nav_admin">Admin</a></li>
           <li><a class="btn btn-secondary" href="queues.html" data-i18n="nav_queues">Queues</a></li>
           <li>
             <label for="language-select" class="visually-hidden">Language</label>
