--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="logo-container">
         <div>
-          <img src="https://via.placeholder.com/60x60/2c7fb8/ffffff?text=QECH" alt="QECH Logo" class="logo" />
+          <img src="../images/Screenshot 2025-11-01 111731.png" alt="QECH Logo" class="logo" />
           <div>
             <h1 data-i18n="hospital_name">Queen Elizabeth Central Hospital</h1>
             <h2 data-i18n="system_name">Digital Queue Management System</h2>
