--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="logo-container">
                 <div>
-                    <img src="https://via.placeholder.com/60x60/2c7fb8/ffffff?text=QECH" alt="QECH Logo" class="logo">
+                    <img src="./images/Screenshot 2025-11-01 111731.png" alt="QECH Logo" class="logo">
                     <div>
                         <h1 data-i18n="hospital_name">Queen Elizabeth Central Hospital</h1>
                         <h2 data-i18n="system_name">Digital Queue Management System</h2>
@@ -21,9 +21,6 @@
             <nav aria-label="Primary">
                 <ul>
                     <li><a class="btn btn-secondary" href="index.html" data-i18n="nav_home">Home</a></li>
-                    <li><a class="btn btn-secondary" href="./html/patient.html" data-i18n="nav_patient">Patient</a></li>
-                    <li><a class="btn btn-secondary" href="./html/staff.html" data-i18n="nav_staff">Staff</a></li>
-                    <li><a class="btn btn-secondary" href="./html/admin.html" data-i18n="nav_admin">Admin</a></li>
                     <li><a class="btn btn-secondary" href="./html/queues.html" data-i18n="nav_queues">Queues</a></li>
                     <li><a class="btn btn-primary" href="./html/display.html" data-i18n="nav_display">Public Display</a></li>
                     <li>
@@ -119,7 +116,6 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2023 Queen Elizabeth Central Hospital - Digital Queue Management System</p>
-                <p>Developed as part of NACIT Advanced Diploma in Computing Project</p>
             </div>
         </div>
     </footer>
