--- a/html/profile.html
+++ b/html/profile.html
@@ -14,7 +14,7 @@
           <img src="https://via.placeholder.com/60x60/2c7fb8/ffffff?text=QECH" alt="QECH Logo" class="logo" />
           <div>
             <h1 data-i18n="hospital_name">Queen Elizabeth Central Hospital</h1>
-            <h2 data-i18n="system_name">Digital Queue Management System</h2>
+            <h2 data-i18n="system_name">Queue Management System</h2>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
           Phone: +265 1 871 111</p>
       </div>
       <div class="footer-bottom">
-        <p data-i18n="footer_line1">&copy; 2023 Queen Elizabeth Central Hospital - Digital Queue Management System</p>
+        <p data-i18n="footer_line1">&copy; 2023 Queen Elizabeth Central Hospital - Queue Management System</p>
       
       </div>
     </div>
