--- a/html/display.html
+++ b/html/display.html
@@ -46,29 +46,29 @@
         <div class="department-queue">
           <h3 data-i18n="dept_opd">Outpatient Department (OPD)</h3>
           <div id="opd-queue" class="queue-display">
-            <p>Currently Serving: <span class="current-token">-</span></p>
-            <p>Next: <span class="next-token">-</span></p>
+            <p><span data-i18n="label_currently_serving">Currently Serving:</span> <span class="current-token">-</span></p>
+            <p><span data-i18n="label_next">Next:</span> <span class="next-token">-</span></p>
           </div>
         </div>
         <div class="department-queue">
           <h3 data-i18n="dept_maternity">Maternity</h3>
           <div id="maternity-queue" class="queue-display">
-            <p>Currently Serving: <span class="current-token">-</span></p>
-            <p>Next: <span class="next-token">-</span></p>
+            <p><span data-i18n="label_currently_serving">Currently Serving:</span> <span class="current-token">-</span></p>
+            <p><span data-i18n="label_next">Next:</span> <span class="next-token">-</span></p>
           </div>
         </div>
         <div class="department-queue">
           <h3 data-i18n="dept_emergency">Emergency</h3>
           <div id="emergency-queue" class="queue-display">
-            <p>Currently Serving: <span class="current-token">-</span></p>
-            <p>Next: <span class="next-token">-</span></p>
+            <p><span data-i18n="label_currently_serving">Currently Serving:</span> <span class="current-token">-</span></p>
+            <p><span data-i18n="label_next">Next:</span> <span class="next-token">-</span></p>
           </div>
         </div>
         <div class="department-queue">
           <h3 data-i18n="dept_pediatrics">Pediatrics</h3>
           <div id="pediatrics-queue" class="queue-display">
-            <p>Currently Serving: <span class="current-token">-</span></p>
-            <p>Next: <span class="next-token">-</span></p>
+            <p><span data-i18n="label_currently_serving">Currently Serving:</span> <span class="current-token">-</span></p>
+            <p><span data-i18n="label_next">Next:</span> <span class="next-token">-</span></p>
           </div>
         </div>
       </div>
@@ -79,20 +79,20 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>About QECH</h3>
-          <p>Queen Elizabeth Central Hospital is Malawi's largest referral hospital, providing quality healthcare services to the nation.</p>
+          <h3 data-i18n="about_qech">About QECH</h3>
+          <p data-i18n="about_qech_desc">Queen Elizabeth Central Hospital is Malawi's largest referral hospital, providing quality healthcare services to the nation.</p>
         </div>
         <div class="footer-section">
-          <h3>Quick Links</h3>
+          <h3 data-i18n="quick_links">Quick Links</h3>
           <ul>
-            <li><a href="patient.html">Patient Portal</a></li>
-            <li><a href="staff.html">Staff Portal</a></li>
-            <li><a href="admin.html">Admin Portal</a></li>
-            <li><a href="display.html">Public Display</a></li>
+            <li><a href="patient.html" data-i18n="patient_portal">Patient Portal</a></li>
+            <li><a href="staff.html" data-i18n="staff_portal">Staff Portal</a></li>
+            <li><a href="admin.html" data-i18n="admin_portal">Admin Portal</a></li>
+            <li><a href="display.html" data-i18n="nav_display">Public Display</a></li>
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Contact</h3>
+          <h3 data-i18n="contact">Contact</h3>
           <p>Queen Elizabeth Central Hospital<br>
           Blantyre, Malawi<br>
           Phone: +265 1 871 111</p>
