--- a/html/queues.html
+++ b/html/queues.html
@@ -40,24 +40,24 @@
         <h2 data-i18n="nav_queues">Queues</h2>
         <form id="queues-filter-form" class="control-buttons" style="margin:0;">
           <div class="form-group" style="margin:0;">
-            <label for="queues-dept">Department</label>
+            <label for="queues-dept" data-i18n="lbl_department">Department</label>
             <select id="queues-dept" name="queues-dept">
-              <option value="all">All</option>
-              <option value="opd">Outpatient Department (OPD)</option>
-              <option value="maternity">Maternity</option>
-              <option value="emergency">Emergency</option>
-              <option value="pediatrics">Pediatrics</option>
+              <option value="all" data-i18n="all">All</option>
+              <option value="opd" data-i18n="dept_opd">Outpatient Department (OPD)</option>
+              <option value="maternity" data-i18n="dept_maternity">Maternity</option>
+              <option value="emergency" data-i18n="dept_emergency">Emergency</option>
+              <option value="pediatrics" data-i18n="dept_pediatrics">Pediatrics</option>
             </select>
           </div>
           <div class="form-group" style="margin:0;">
-            <label for="queues-priority">Priority</label>
+            <label for="queues-priority" data-i18n="lbl_priority">Priority</label>
             <select id="queues-priority" name="queues-priority">
-              <option value="all">All</option>
-              <option value="priority">Priority Only</option>
-              <option value="regular">Regular Only</option>
+              <option value="all" data-i18n="all">All</option>
+              <option value="priority" data-i18n="priority_only">Priority Only</option>
+              <option value="regular" data-i18n="regular_only">Regular Only</option>
             </select>
           </div>
-          <button type="submit" class="btn btn-primary">Apply</button>
+          <button type="submit" class="btn btn-primary" data-i18n="btn_apply">Apply</button>
         </form>
       </div>
 
@@ -86,20 +86,20 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>About QECH</h3>
-          <p>Queen Elizabeth Central Hospital is Malawi's largest referral hospital, providing quality healthcare services to the nation.</p>
+          <h3 data-i18n="about_qech">About QECH</h3>
+          <p data-i18n="about_qech_desc">Queen Elizabeth Central Hospital is Malawi's largest referral hospital, providing quality healthcare services to the nation.</p>
         </div>
         <div class="footer-section">
-          <h3>Quick Links</h3>
+          <h3 data-i18n="quick_links">Quick Links</h3>
           <ul>
-            <li><a href="patient.html">Patient Portal</a></li>
-            <li><a href="staff.html">Staff Portal</a></li>
-            <li><a href="admin.html">Admin Portal</a></li>
-            <li><a href="display.html">Public Display</a></li>
+            <li><a href="patient.html" data-i18n="patient_portal">Patient Portal</a></li>
+            <li><a href="staff.html" data-i18n="staff_portal">Staff Portal</a></li>
+            <li><a href="admin.html" data-i18n="admin_portal">Admin Portal</a></li>
+            <li><a href="display.html" data-i18n="nav_display">Public Display</a></li>
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Contact</h3>
+          <h3 data-i18n="contact">Contact</h3>
           <p>Queen Elizabeth Central Hospital<br>
           Blantyre, Malawi<br>
           Phone: +265 1 871 111</p>
